# uber-fares

./: .gitignore  LICENSE  Makefile  README.md  environment.explicit.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: cloud-function.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/guides/: commands.rst  getting-started.rst
functions/: main.py
functions/ml-prediction-fn/: requirements.txt
functions/src/: empty_features.csv
gcloud/: hp_config.yml  train_config.yml
models/: keras_metadata.pb  model.joblib  saved_model.pb
models/variables/: variables.data-00000-of-00001  variables.index
notebooks/0.1_data_processing_tests/: 0.1-mmykhaylov-timezone-conversion.ipynb  0.2-mmykhaylov-nyc-neigbourhood-processing.ipynb  0.3-mmykhaylov-us-holidays-processing.ipynb
notebooks/0.2_exploration/: 0.1-mmykhaylov-initial-exploration.ipynb  0.2-mmykhaylov-further-exploration.ipynb
notebooks/0.3_machine_learning/: 0.1-mmykhaylov-decisison-boosting.ipynb  0.2-mmykhaylov-tensorflow.ipynb
utils/data/: __init__.py  __main__.py  cli.py  make_dataset.py
utils/data/helpers/: __init__.py  dataprocessor.py
utils/data/subroutines/: __init__.py  clean.py  enrich.py  format.py
utils/features/: __init__.py  __main__.py  build_features.py  cli.py
utils/models/: __init__.py  __main__.py  cli.py  train_model.py
utils/models/helpers/: __init__.py  make_model.py
web/: .eslintrc.yml  .gitignore  .pnp.cjs  .prettierrc.yml  README.md  index.html  package.json  snowpack.config.js  tsconfig.json  vite.config.ts
web/public/: index.html
web/src/: index.tsx
web/src/api/: index.ts
web/src/components/: GetFares.tsx
web/src/components/coordinates/: CoordDisplay.tsx  Coordinate.tsx
web/src/components/fares/: PredictedFare.tsx
web/src/components/form/: Form.tsx  PassengerCount.tsx  YearSelector.tsx
web/src/components/map/: Map.tsx  Marker.tsx
web/src/containers/: App.tsx  Hero.tsx
web/src/state/: atoms.ts
web/types/: api.ts
