[project]
name = "uber-fares"
version = "0.2.1"
description = "Uber Fares Data Science"
authors = [
    { name = "Michael Mykhaylov", email = "mikemikhailov2003@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
documentation = "https://uber-fares-docs.netlify.app/"
repository = "https://github.com/mmykhaylov/uber-fares"

[tool.yapf]
based_on_style = "google"
column_limit = 119
