[project]
name = "uber-fares"
version = "0.2.1"
description = "Uber Fares Data Science"
authors = [
    { name = "Michael Mykhaylov", email = "mikemikhailov2003@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
documentation = "https://uber-fares-docs.netlify.app/"
repository = "https://github.com/mmykhaylov/uber-fares"

[tool.yapf]
based_on_style = "google"
column_limit = 119

[tool.flakeheaven]
# make output nice
format = "grouped"
# 80 chars aren't enough in 21 century
max_line_length = 119
# show line of source code in output
# show_source = true
# limit complexity to 10
max_complexity = 10

[tool.flakeheaven.plugins]
mccabe = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = [
    "+*",
    "-C0103",
    "-C0301",
    "-W1203",
    "-C0114",
]
